--- a/static/stat564/note_stat564.Rmd
+++ b/static/stat564/note_stat564.Rmd
@@ -339,18 +339,18 @@ $$\frac{\hat{β_j}-β_j}{se(\hatβ_j)}\sim t_{df=dfE=n-(k+1)}$$
 
 $$\frac{\hat y_0|x_0-(\hat\beta_0+\hat\beta_1x_0)}{se(\hat y_0|x_0)}=\frac{\hat y_0-\bar y_0}{se(\hat y_0)}\sim t_{df=n-2}$$
 
- item |$\hat\beta_0$| $\hat\beta_1$ | $\hatβ_j$ | Predict$\hat y_0$ | Multi$\hat y_0$
+| item |$\hat\beta_0$| $\hat\beta_1$ | $\hatβ_j$ | Predict$\hat y_0$ | Multi$\hat y_0$
 |---|---|---|---|---|---
-se |$\sqrt{\hat\sigma^2(\frac1n+\frac{\bar x^2}{S_{xx}})}$|$\sqrt{\frac{\hat\sigma^2}{S{xx}}}$| $\sqrt{C_{jj}MSE}$ | $\sqrt{MSE\left[\frac1k+\frac1n+\frac{(x_0-\bar x)^2}{S_{xx}}\right]}$ | $\sqrt{\hat\sigma^2(1+\mathbf{x_0'(X'X)^{-1}x_0})}$
-T Test| $\frac{\hat{\beta_0}}{se(\hat{\beta_0})}$|$\frac{\hat{\beta_1}}{se(\hat{\beta_1})}$| $\frac{\hat{β_j}-c}{se(β_j)}$ | $\frac{\hat y_0-\bar y_0}{se(\hat y_0)}$
-CI | $\hat{\beta_0}\pm t_{\alpha/2}se(\hat{\beta_0})$| $\hat{\beta_1}\pm t_{\alpha/2}se(\hat{\beta_1})$| $\mathbf{\hat{β}}\pm t_{\alpha/2}se(\mathbf{\hat{β}})$ | $\hat y_0\pm t_{\alpha/2,n-2}se(\hat y_0)$ | $\hat y_0\pm t_{\alpha/2,n-(k+1)}se(\hat y_0)$
+|se |$\sqrt{\hat\sigma^2(\frac1n+\frac{\bar x^2}{S_{xx}})}$|$\sqrt{\frac{\hat\sigma^2}{S{xx}}}$| $\sqrt{C_{jj}MSE}$ | $\sqrt{MSE\left[\frac1k+\frac1n+\frac{(x_0-\bar x)^2}{S_{xx}}\right]}$ | $\sqrt{\hat\sigma^2(1+\mathbf{x_0'(X'X)^{-1}x_0})}$
+|T Test| $\frac{\hat{\beta_0}}{se(\hat{\beta_0})}$|$\frac{\hat{\beta_1}}{se(\hat{\beta_1})}$| $\frac{\hat{β_j}-c}{se(β_j)}$ | $\frac{\hat y_0-\bar y_0}{se(\hat y_0)}$
+|CI | $\hat{\beta_0}\pm t_{\alpha/2}se(\hat{\beta_0})$| $\hat{\beta_1}\pm t_{\alpha/2}se(\hat{\beta_1})$| $\mathbf{\hat{β}}\pm t_{\alpha/2}se(\mathbf{\hat{β}})$ | $\hat y_0\pm t_{\alpha/2,n-2}se(\hat y_0)$ | $\hat y_0\pm t_{\alpha/2,n-(k+1)} se(\hat y_0)$
 
 
 #### Standard Error of Parameters
 
 $se(\hat\beta_1)=\sqrt{Var(\hat\beta_1)}=\sqrt \frac{{\hat\sigma}^2}{\sum(x_i-\bar{x})^2}=\sqrt{\frac{MSE}{S{xx}}}=\frac{\sqrt{n}\hat{\sigma}}{\sqrt{n-2} \sqrt{\sum (x_i-\bar{x})^2}}$
 
-$se(\hat{\beta_0})=\sqrt{Var(\hat\beta_0)}=\sqrt{\hat\sigma^2(\frac1n+\frac{\bar x^2}{S_{xx}})}=\sqrt{\dfrac{\hat{\sigma}^2}{n-2}}=\sqrt{\dfrac{MSE}{n}}$
+$se(\hat{\beta_0})=\sqrt{Var(\hat\beta_0)}=\sqrt{\hat\sigma^2(\frac1n+\frac{\bar x^2}{S_{xx}})}=\sqrt{\dfrac{\hat{\sigma}^2}{n-2}}=\sqrt{\frac{MSE}{n}}$
 
 $se(\hatβ_j)=\sqrt{C_{jj}\hat\sigma^2}=\sqrt{C_{jj}MSE}$
 
