--- a/static/stat565/lab_stat565.Rmd
+++ b/static/stat565/lab_stat565.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "STAT565_Lab"
 author: "Shen Qu"
-date: "`r format(Sys.time(), '%B %d, %Y')`"
+date: ""
 output: 
   pdf_document:
 #    highlight: pygments
