--- a/docs/stat565/lab_stat565.Rmd
+++ b/docs/stat565/lab_stat565.Rmd
@@ -12,7 +12,7 @@ geometry: margin=0.25in
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE,cache=FALSE, size="tiny",cache=FALSE, results="markup", tidy=T)
+knitr::opts_chunk$set(echo = TRUE,cache=FALSE, size="tiny",results="markup", tidy=T)
 
 # theme: default, cerulean, journal, flatly, darkly, readable, spacelab, united, cosmo, lumen, paper, sandstone, simplex, and yeti
 
