fixed the 564 note

--- a/docs/stat564/note_stat564.Rmd
+++ b/docs/stat564/note_stat564.Rmd
@@ -348,7 +348,7 @@ $$\frac{\hat y_0|x_0-(\hat\beta_0+\hat\beta_1x_0)}{se(\hat y_0|x_0)}=\frac{\hat 
 
 #### Standard Error of Parameters
 
-$se(\hat\beta_1)=\sqrt{Var(\hat\beta_1)}=\sqrt \frac{{\hat\sigma}^2}{\sum(x_i-\bar{x})^2}=\sqrt{\frac{MSE}{S{xx}}}=\frac{\sqrt{n}\hat{\sigma}}{\sqrt{n-2} \sqrt{\sum (x_i-\bar{x})^2}}$
+$se(\hat\beta_1)=\sqrt{Var(\hat\beta_1)}=\sqrt \frac{\hat\sigma^2}{\sum(x_i-\bar{x})^2}=\sqrt{\frac{MSE}{S{xx}}}=\frac{\sqrt{n}\hat\sigma}{\sqrt{n-2} \sqrt{\sum (x_i-\bar{x})^2}}$
 
 $se(\hat{\beta_0})=\sqrt{Var(\hat\beta_0)}=\sqrt{\hat\sigma^2(\frac1n+\frac{\bar x^2}{S_{xx}})}=\sqrt{\frac{\hat\sigma^2}{n-2}}=\sqrt{\frac{MSE}{n}}$
 
