--- a/static/stat562/note_stat562.Rmd
+++ b/static/stat562/note_stat562.Rmd
@@ -987,7 +987,7 @@ $$E_\theta\left[(\frac{\partial}{\partial\theta}\ln f(X|\theta))^2\right]=-E_\th
 
 **Example 7.3.13 (Unbiased estimator for the scale uniform)**
 
-A shortcoming of this approach to finding best unbiased estimators is that, even if the Cramer-Roo Theorem is applicable, there is no guarantee that the bound is sharp. That is to say, the value of the Cramer-Roo Lower Bound may be _strictly smaller_ than
+A shortcoming of this approach to finding best unbiased estimators is that, even if the Cramer-Rao Theorem is applicable, there is no guarantee that the bound is sharp. That is to say, the value of the Cramer-Roo Lower Bound may be _strictly smaller_ than
 the variance of _any_ unbiased estimator. In fact, in the usually favorable case of being a one-parameter exponential family, the most that we can say is that $f(x|\theta)$ exists a parameter $\tau(\theta)$ with an unbiased estimator that achieves the Cramer-Roo
 Lower Bound. However, in other typical situations, for other parameters, the bound may not be attainable. These situations cause concern because, if we cannot find an estimator that attains the lower bound, we have to decide whether no estimator can attain it or whether we must look at more estimators.
 
@@ -999,10 +999,7 @@ Lower Bound. However, in other typical situations, for other parameters, the bou
 
 ### 7.3.3 Sufficiency and Unbiasedness
 
-**Theorem 7.3. 17 (Rao-Blackwell)** Let W be any unbiased estimator of T(61), and
-let T be a sufficient statistic for 61. Define ¢(T) = E (W IT) . Then Eo¢(T) = T(61) and
-Varo ¢(T) 􀀾 Varo W for all 61; that is, ¢(T) is a uniformly better unbiased estimator
-of T(e).
+**Theorem 7.3. 17 (Rao-Blackwell)** Let $W$ be any unbiased estimator of $\tau(\theta)$, and let $T$ be a sufficient statistic for $\theta$. Define $\phi(T)=E[W|T]$. Then $E_{\theta}\phi(T)=\tau(\theta)$ and $Var_{\theta}\phi(T)\le Var_{\theta}(W)$ for all $\theta$; that is, $\phi(T)$ is a uniformly better unbiased estimator of $\tau(\theta)$.
 
 ### 7.3.4 Losst Function Optimality
 
@@ -1035,8 +1032,55 @@ where $c$ is a positive constant. As the constant $c$ varies, the loss function 
 ## 10.1 Point Estimation
 ### 10.1.1 Consistency
 ### 10.1.2 Efficiency
+
+
+
 ### 10.1.3 Calculations and Comparisons
-### 10.1.4 Bootstrap Standard Errors
+
+**Example 20120405p4-8** $X_1,,X_n\sim Expo(\lambda)$ Compare the MLE of $\lambda$ and an unbiased version of it.
+
+Step 1 $\hat\lambda_{MLE}$
+
+$L(\lambda)=\prod\lambda e^{-\lambda x_i}=\lambda^ne^{-\lambda\sum x_i}$
+
+$l(\lambda)=n\ln\lambda-\lambda\sum x_i$
+
+$l'(\lambda)=\frac{n}\lambda-\sum x_i\overset{\text{set}}{=}0$
+
+$\hat\lambda_{MLE}=\frac{n}{\sum x_i}=\frac1{\bar x}$
+
+
+
+Step 2 $E[\hat\lambda_{MLE}]$
+
+$E[\hat\lambda_{MLE}]=\frac{n\lambda}{n-1}$
+
+
+Step 3 $\hat\lambda_{u}$
+
+$\hat\lambda_{u}=\frac{n-1}{\sum x_i}$
+
+
+Step 4 CRLB for unbiased
+
+$\frac{1}{nI(\lambda)}=\frac{1}{n\frac1{\lambda^2}}=\frac{\lambda^2}{n}$
+
+
+'Step 5 $V[\hat\lambda_{MLE}]$'
+
+$V[\hat\lambda_{MLE}]=\frac{n^2\lambda^2}{(n-1)^2(n-2)}$
+
+
+
+Step 6 $V[\hat\lambda_{u}]$
+
+$V[\hat\lambda_{u}]=V[\frac{n-1}n\hat\lambda_{MLE}]=\frac{\lambda^2}{n-2}$
+
+efficiency of $\hat\lambda_{u}$ is $\frac{\lambda^2/n}{\lambda^2/(n-2)}=\frac{n-2}n$
+
+$\therefore \hat\lambda_{u}$ is not efficient is asymptotic efficient. $\hat\lambda_{MLE}$ is also asymptotic efficieint.
+
+## 10.1.4 Bootstrap Standard Errors
 
 ## 10.2 Robustness
 ### 10.2.1 The Mean and the Median
