--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -79,3 +79,70 @@ $$E(Z_i|X_i,p)=P(Z_i=1|X_i,p)$$
 Through r times iteration,
 
 $$\hat p^{(r+1)}=\frac1n\sum_{i=1}^n\frac{\hat p^{(r)}f(x_i)}{\hat p^{(r)}f(x_i)+(1-\hat p^{(r)})g(x_i)}$$
+
+**7.48** Suppose that $X_i, i=1,..,n$, are iid $Bernoulli(p)$.
+
+(a) Show that the variance of the MLE of $p$ attains the Cramer-Rae Lower Bound.
+
+(b) For $n\ge4$, show that the product $X_1X_2X_3X_4$ is an unbiased estimator of $p^4$, and use this fact to find the best unbiased estimator of $p^4$.
+
+
+
+**7.59** Let $X_1,..,X_n$ be iid $n(\mu, \sigma^2)$. Find the best unbiased estimator of $\sigma^2$, where $p$ is a known positive constant, not necessarily an integer.
+
+
+## HW2
+
+**8.5** A random sample, $X_1,..,X_n$. , is drawn from a Pareto population with pdf $f(x|\theta,\nu)=\frac{\theta\nu^{\theta}}{x^{\theta+1}}I_{[\nu,\infty)}(x),\theta>0,\nu>0$
+
+(a) Find the MLEs of $\theta$ and $\nu$.
+
+
+(b) Show that the LRT of $H_0:\theta=1, \nu$ unknown, versus $H_1: \theta\ne1,\nu$ unknown, has critical region of the form $\{x:T(x)\le C_1 or T(x)\ge c_2\}$, where $0<C_1<C_2$ and
+
+$$T=\ln\left[\frac{\prod_{i=1}^n X_i}{(\min\limits_{i} X_i)^n}\right]$$
+
+(c) Show that, under $H_0, 2T$ has a chi squared distribution, and find the number of degrees of freedom. 
+
+(Hint: Obtain the joint distribution of the $n-1$ nontrivial terms $X_i/(\min_i X_i)$ conditional on $\min_i X_i$. Put these $n-1$ terms together, and notice that the distribution of $T$ given $\min_i X_i$ does not depend on $\min_i X_i$, so it is the unconditional distribution of $T$.)
+
+
+
+**8.17** Suppose that $X_1,..,X_n$ are iid with a $beta(\mu,1)$ pdf and $Y_1,..,Y_m$ are iid with a $beta(\theta,1)$ pdf. Also assume that the $X_S$ are independent of the $Y_s$.
+
+(a) Find an LRT of $H_0:(\theta=\mu$ versus $H_1:(\theta\ne\mu$.
+
+(b) Show that the test in part (a) can be based on the statistic
+
+$$T=\frac{\sum\ln X_i}{\sum\ln X_i+\sum\ln Y_i}$$
+
+(c) Find the distribution of $T$ when $H_0$ is true, and then show how to get a test of size $\alpha=.10$.
+
+**8.19** The random variable $X$ has pdf $f(x)=e{-x}, x>O$. One observation is obtained on the random variable $Y=X^{\theta}$, and a test of $H_0:\theta=1$ versus $H_1:\theta=2$ needs to be constructed. Find the UMP level $\alpha=.10$ test and compute the Type II Error probability.
+
+## HW3
+
+**8.28** Let $f(x|\theta)$ be the logistic location pdf
+
+$$f(x|\theta)=\frac{e^{x-\theta}}{(1+e^{x-\theta})^2},-\infty<x<\infty,-\infty<\theta<\infty$$
+
+(a) Show that this family has an MLR.
+
+(b) Based on one observation, $X$, find the most powerful size $\alpha$ test of $H_0:\theta=0$ versus $H_1:\theta=1$. For $\alpha=.2$, find the size of the Type II Error.
+
+(c) Show that the test in part (b) is UMP size $\alpha$ for testing $H_0:\theta\le0$ versus $H_1:\theta>1$. What can be said about UMP tests in general for the logistic location family?
+
+
+**8.33** Let $X_1,..,X_n$ be a random sample from the $uniform(0,\theta+1)$ distribution. $T_0$ test
+$H_0:\theta=0$versus $H_1:\theta>0$, use the test reject $H_0$ if $Y_n\ge1$ or$ Y_1\ge k$, where k is a constant, $Y_1= \min\{X_1,..,X_n\}, Y_n= \max\{X_1,..,X_n\}$.
+
+(a) Determine k so that the test will have size $\alpha$.
+
+(b) Find an expression for the power function of the test in part (a) .
+
+(c) Prove that the test is UMP size $\alpha$.
+
+(d) Find values of n and k so that the UMP .10 level test will have power at least .8 if $\theta>1$.
+
+
+
